--- a/app/src/main/res/layout/custom_attribute_example_first_activity.xml
+++ b/app/src/main/res/layout/custom_attribute_example_first_activity.xml
@@ -4,15 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutDescription="@xml/motion_scene_example_first"
+    app:layoutDescription="@xml/custom_attribute_example_first"
     app:showPaths="true"
-    tools:context=".MotionSceneExampleFirstActivity">
+    tools:context=".CustomAttributeExampleFirstActivity">
 
-    <ImageView
+    <View
         android:id="@+id/motion_view"
-        android:layout_width="@dimen/size_big_x"
-        android:layout_height="@dimen/size_big_x"
-        android:contentDescription="@null"
-        android:src="@drawable/ic_r2d2" />
+        android:layout_width="@dimen/size_small"
+        android:layout_height="@dimen/size_small" />
 
 </android.support.constraint.motion.MotionLayout>
