add keyframe examples

--- a/app/src/main/res/xml/key_frames_example_first.xml
+++ b/app/src/main/res/xml/key_frames_example_first.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:motion="http://schemas.android.com/apk/res-auto">
+             xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
         motion:constraintSetEnd="@+id/end"
@@ -13,18 +13,22 @@
                 motion:framePosition="25"
                 motion:keyPositionType="parentRelative"
                 motion:percentY="0.25"
-                motion:target="@id/motion_view" />
+                motion:target="@id/motion_view"/>
             <KeyPosition
                 motion:framePosition="75"
                 motion:keyPositionType="parentRelative"
                 motion:percentY="0.75"
-                motion:target="@id/motion_view" />
+                motion:target="@id/motion_view"/>
+            <KeyAttribute
+                android:rotation="45"
+                motion:framePosition="50"
+                motion:target="@id/motion_view"/>
         </KeyFrameSet>
 
         <OnSwipe
             motion:dragDirection="dragRight"
             motion:touchAnchorId="@+id/motion_view"
-            motion:touchAnchorSide="right" />
+            motion:touchAnchorSide="right"/>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
@@ -35,7 +39,7 @@
             android:layout_marginStart="@dimen/size_small"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent" />
+            motion:layout_constraintTop_toTopOf="parent"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -46,7 +50,7 @@
             android:layout_marginEnd="@dimen/size_small"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent" />
+            motion:layout_constraintTop_toTopOf="parent"/>
     </ConstraintSet>
 
 </MotionScene>
