--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".main.MainActivity">
 
     <Button
         android:id="@+id/button_motion_scene_first"
@@ -48,13 +48,23 @@
         app:layout_constraintTop_toBottomOf="@id/button_custom_attribute_first"/>
 
     <Button
-        android:id="@+id/button_key_frames_first"
+        android:id="@+id/button_key_frames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_medium"
-        android:text="@string/button_key_frames_first_text"
+        android:text="@string/button_key_frames_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_custom_attribute_second"/>
+
+    <Button
+        android:id="@+id/button_collapsing_with_motion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_medium"
+        android:text="@string/button_collapsing_with_motion_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_key_frames"/>
 
 </android.support.constraint.ConstraintLayout>
