--- a/app/src/main/res/layout/motion_scene_example_second_activity.xml
+++ b/app/src/main/res/layout/motion_scene_example_second_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layoutDescription="@xml/motion_scene_example_second"
     app:showPaths="true"
-    tools:context=".MotionSceneExampleSecondActivity">
+    tools:context=".motionscene.MotionSceneExampleSecondActivity">
 
     <ImageView
         android:id="@+id/motion_view"
