--- a/app/src/main/res/xml/key_frames_example.xml
+++ b/app/src/main/res/xml/key_frames_example.xml
@@ -21,6 +21,8 @@
                 motion:target="@id/motion_view"/>
             <KeyAttribute
                 android:rotation="45"
+                android:scaleX="1.3"
+                android:scaleY="1.3"
                 motion:framePosition="50"
                 motion:target="@id/motion_view"/>
         </KeyFrameSet>
