--- a/app/src/main/res/layout/collapsing_with_motion_appbar.xml
+++ b/app/src/main/res/layout/collapsing_with_motion_appbar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.mw2c.pipboy200011.motionlayoutlecture.collapsingwithmotion.CollapsibleToolbar
-    android:id="@+id/motionLayout"
+<com.mw2c.pipboy200011.motionlayoutlecture.collapsingwithmotion.CollapsibleToolbar android:id="@+id/motionLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,7 +7,8 @@
     android:fitsSystemWindows="false"
     android:minHeight="50dp"
     app:layoutDescription="@xml/collapsing_with_motion_example"
-    app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">
+    app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
+    app:showPaths="true">
 
     <ImageView
         android:id="@+id/background"
@@ -16,7 +16,7 @@
         android:layout_height="200dp"
         android:background="@color/colorAccent"
         android:scaleType="fitXY"
-        android:src="@drawable/millenium_falcon"/>
+        android:src="@drawable/millenium_falcon" />
 
     <TextView
         android:id="@+id/label"
@@ -26,6 +26,6 @@
         android:textColor="#FFF"
         android:textSize="16dp"
         android:transformPivotX="0dp"
-        android:transformPivotY="0dp"/>
+        android:transformPivotY="0dp" />
 
 </com.mw2c.pipboy200011.motionlayoutlecture.collapsingwithmotion.CollapsibleToolbar>
