--- a/app/src/main/res/layout/collapsing_with_motion_example_activity.xml
+++ b/app/src/main/res/layout/collapsing_with_motion_example_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/content"
+<android.support.design.widget.CoordinatorLayout android:id="@+id/content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,7 +15,7 @@
         android:layout_height="160dp"
         android:background="@color/colorPrimary">
 
-        <include layout="@layout/collapsing_with_motion_appbar"/>
+        <include layout="@layout/collapsing_with_motion_appbar" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
@@ -29,8 +28,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lineSpacingExtra="@dimen/size_medium"
+            android:padding="@dimen/size_medium"
             android:text="@string/collapsing_text"
-            />
+            android:textColor="@android:color/black" />
 
     </android.support.v4.widget.NestedScrollView>
 
