--- a/app/src/main/res/layout/view_pager_with_motion_example.xml
+++ b/app/src/main/res/layout/view_pager_with_motion_example.xml
@@ -21,7 +21,7 @@
         android:id="@+id/item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_millennium_falcon"
+        android:src="@drawable/ic_death_star"
         tools:layout_editor_absoluteX="7dp"
         tools:layout_editor_absoluteY="194dp" />
 
