--- a/app/src/main/res/xml/collapsing_with_motion_example.xml
+++ b/app/src/main/res/xml/collapsing_with_motion_example.xml
@@ -21,6 +21,12 @@
             android:rotation="-90.0"
             motion:layout_constraintBottom_toBottomOf="@+id/background"
             motion:layout_constraintStart_toStartOf="parent"/>
+        <Constraint
+            android:id="@+id/sub_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintBottom_toBottomOf="@+id/background"
+            motion:layout_constraintEnd_toEndOf="parent"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -39,6 +45,12 @@
             android:rotation="0.0"
             motion:layout_constraintBottom_toBottomOf="@+id/background"
             motion:layout_constraintStart_toStartOf="parent"/>
+        <Constraint
+            android:id="@+id/sub_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintBottom_toBottomOf="@+id/background"
+            motion:layout_constraintStart_toEndOf="parent"/>
     </ConstraintSet>
 
 </MotionScene>
