--- a/app/src/main/res/xml/viewpager_with_motion_example.xml
+++ b/app/src/main/res/xml/viewpager_with_motion_example.xml
@@ -23,8 +23,8 @@
                 motion:layout_constraintTop_toTopOf="parent"/>
             <Constraint
                 android:id="@id/item"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="@dimen/size_big_x"
+                android:layout_height="@dimen/size_big_x"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="20dp"
                 motion:layout_constraintBottom_toBottomOf="parent"
@@ -40,8 +40,8 @@
                 motion:layout_constraintTop_toTopOf="parent"/>
             <Constraint
                 android:id="@id/item"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="@dimen/size_big_x"
+                android:layout_height="@dimen/size_big_x"
                 android:layout_marginBottom="8dp"
                 android:layout_marginRight="20dp"
                 motion:layout_constraintBottom_toBottomOf="parent"
