--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="size_small">8dp</dimen>
     <dimen name="size_medium">16dp</dimen>
     <dimen name="size_big">32dp</dimen>
+    <dimen name="size_big_s">48dp</dimen>
     <dimen name="size_big_x">64dp</dimen>
 </resources>
