--- a/app/src/main/res/layout/collapsing_with_motion_appbar.xml
+++ b/app/src/main/res/layout/collapsing_with_motion_appbar.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.mw2c.pipboy200011.motionlayoutlecture.collapsingwithmotion.CollapsibleToolbar android:id="@+id/motionLayout"
-                                                                                   xmlns:android="http://schemas.android.com/apk/res/android"
-                                                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                                                   android:layout_width="match_parent"
-                                                                                   android:layout_height="match_parent"
-                                                                                   android:fitsSystemWindows="false"
-                                                                                   android:minHeight="50dp"
-                                                                                   app:layoutDescription="@xml/collapsing_with_motion_example"
-                                                                                   app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
-                                                                                   app:showPaths="true">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="false"
+    android:minHeight="50dp"
+    app:layoutDescription="@xml/collapsing_with_motion_example"
+    app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
+    tools:showPaths="true">
 
     <ImageView
         android:id="@+id/background"
@@ -16,7 +17,7 @@
         android:layout_height="200dp"
         android:background="@color/colorAccent"
         android:scaleType="fitXY"
-        android:src="@drawable/millenium_falcon"/>
+        android:src="@drawable/millenium_falcon" />
 
     <TextView
         android:id="@+id/label"
@@ -26,7 +27,7 @@
         android:textColor="#FFF"
         android:textSize="16dp"
         android:transformPivotX="0dp"
-        android:transformPivotY="0dp"/>
+        android:transformPivotY="0dp" />
 
     <TextView
         android:id="@+id/sub_label"
@@ -36,12 +37,18 @@
         android:textColor="#FFF"
         android:textSize="16dp"
         android:transformPivotX="0dp"
-        android:transformPivotY="0dp"/>
+        android:transformPivotY="0dp" />
+
+    <View
+        android:id="@+id/icon_background"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/icon_background" />
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_account_circle"/>
+        android:src="@drawable/ic_account_circle" />
 
 </com.mw2c.pipboy200011.motionlayoutlecture.collapsingwithmotion.CollapsibleToolbar>
