--- a/app/src/main/res/xml/collapsing_with_motion_example.xml
+++ b/app/src/main/res/xml/collapsing_with_motion_example.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@+id/start"
-        motion:interpolator="linear"/>
+        motion:interpolator="linear">
+
+        <KeyFrameSet>
+            <KeyPosition
+                motion:framePosition="25"
+                motion:keyPositionType="parentRelative"
+                motion:percentY="1"
+                motion:target="@id/icon_background" />
+            <KeyPosition
+                motion:framePosition="25"
+                motion:keyPositionType="parentRelative"
+                motion:percentY="1"
+                motion:target="@id/icon" />
+        </KeyFrameSet>
+    </Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
@@ -14,39 +27,38 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="1.0"
-            motion:layout_constraintBottom_toBottomOf="parent"/>
+            motion:layout_constraintBottom_toBottomOf="parent" />
         <Constraint
             android:id="@+id/label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:rotation="-90.0"
             motion:layout_constraintBottom_toBottomOf="@+id/background"
-            motion:layout_constraintStart_toStartOf="parent">
-            <CustomAttribute
-                motion:attributeName="textColor"
-                motion:customColorValue="@android:color/white"/>
-        </Constraint>
+            motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/sub_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             motion:layout_constraintBottom_toBottomOf="@+id/background"
-            motion:layout_constraintEnd_toEndOf="parent"/>
+            motion:layout_constraintEnd_toEndOf="parent" />
         <Constraint
-            android:id="@+id/sub_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            motion:layout_constraintBottom_toBottomOf="@+id/background"
-            motion:layout_constraintEnd_toEndOf="parent"/>
-        <Constraint
-            android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/icon_background"
+            android:layout_width="@dimen/size_big"
+            android:layout_height="@dimen/size_big"
             android:alpha="0"
             motion:layout_constraintBottom_toBottomOf="@id/background"
             motion:layout_constraintEnd_toEndOf="@id/background"
             motion:layout_constraintStart_toStartOf="@id/background"
-            motion:layout_constraintTop_toTopOf="@id/background"/>
+            motion:layout_constraintTop_toTopOf="@id/background" />
+        <Constraint
+            android:id="@+id/icon"
+            android:layout_width="@dimen/size_big"
+            android:layout_height="@dimen/size_big"
+            android:alpha="0"
+            motion:layout_constraintBottom_toBottomOf="@id/icon_background"
+            motion:layout_constraintEnd_toEndOf="@id/icon_background"
+            motion:layout_constraintStart_toStartOf="@id/icon_background"
+            motion:layout_constraintTop_toTopOf="@id/icon_background" />
 
     </ConstraintSet>
 
@@ -56,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0"
-            motion:layout_constraintBottom_toBottomOf="parent"/>
+            motion:layout_constraintBottom_toBottomOf="parent" />
         <Constraint
             android:id="@+id/label"
             android:layout_width="wrap_content"
@@ -65,25 +77,30 @@
             android:layout_marginStart="8dp"
             android:rotation="0.0"
             motion:layout_constraintBottom_toBottomOf="@+id/background"
-            motion:layout_constraintStart_toStartOf="parent">
-            <CustomAttribute
-                motion:attributeName="textColor"
-                motion:customColorValue="@color/colorStarWars"/>
-        </Constraint>
+            motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/sub_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             motion:layout_constraintBottom_toBottomOf="@+id/background"
-            motion:layout_constraintStart_toEndOf="parent"/>
+            motion:layout_constraintStart_toEndOf="parent" />
+
+        <Constraint
+            android:id="@+id/icon_background"
+            android:layout_width="@dimen/size_big"
+            android:layout_height="@dimen/size_big"
+            android:alpha="1.0"
+            motion:layout_constraintBottom_toBottomOf="@id/background"
+            motion:layout_constraintEnd_toEndOf="parent" />
         <Constraint
             android:id="@+id/icon"
             android:layout_width="@dimen/size_big"
             android:layout_height="@dimen/size_big"
-            android:layout_marginRight="@dimen/size_medium"
-            android:alpha="1"
-            motion:layout_constraintBottom_toBottomOf="@id/background"
-            motion:layout_constraintEnd_toEndOf="parent"/>
+            android:alpha="1.0"
+            motion:layout_constraintBottom_toBottomOf="@id/icon_background"
+            motion:layout_constraintEnd_toEndOf="@id/icon_background"
+            motion:layout_constraintStart_toStartOf="@id/icon_background"
+            motion:layout_constraintTop_toTopOf="@id/icon_background" />
     </ConstraintSet>
 
 </MotionScene>
